# rust-http-binary-size

./: Cargo.toml  README.md
src/: main.rs
