[package]
name = "httptest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.30.0"
features = [
    "alloc",
    "Win32_Networking_WinHttp",
    "Win32_Foundation",
]